feat(application authentication): Create application mock model
